both slider added

--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,7 @@
         </style>
         <div>
             <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-gray-200 dark:border-gray-600">
-            <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto py-[23px] px-[16px]">
+            <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto py-[26px] md:py-[23px] px-[16px]">
                 <a href="" class="flex items-center">
                     <img src="assets/Group.png" class="h-[48px] W-[41.57px] mr-2"/>
                     <span class="text-2xl font-bold">DIGITO</span>
@@ -248,7 +248,8 @@
                     <ul class="satoshi-font flex navbar-ul nav-tabs flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                         <li>
                             <a href="#"
-                                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-black md:p-0 md:dark:text-blue-500"
+                                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white
+                                dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                                 aria-current="page">Home</a>
                         </li>
                         <li>
@@ -908,7 +909,7 @@
                     <h2 class="main-title  text-3xl font-[900] pb-[10px]">What People Say</h2>
                     <div class="border-[3px] border-[#F0B80F] rounded-[24px] w-[84px] h-[6px] about-underline"></div>
                 </div>
-                <div class="owl-carousel owl-theme">
+                <div class="owl-carousel owl-theme owl-carousel1">
                     <div class="item mx-5 mb-12 md:mb-0">
                         <div class="mb-6 mx-auto w-32 satoshi-font">
                             <img src="./assets/Frame 36.png" class="rounded-full shadow-lg dark:shadow-black/20"/>
@@ -1147,10 +1148,10 @@
                         </h1>
                         <div class="border-[3px] border-[#F0B80F] rounded-[24px] w-[84px] h-[6px] about-underline"></div>
                     </div>
-                    <div class="flex justify-between flex-wrap w-full h-full lg:flex-row">
-                            <div class="w-full sm:w-[50%] lg:w-[33.33%] p-4 md:px-[50px] 2xl:px-[10px]">
+                    <div class="owl-carousel owl-theme owl-carousel2 overflow-hidden flex justify-between flex-wrap w-full h-full lg:flex-row">
+                            <div class="item w-full p-4 md:px-[50px] 2xl:px-[10px]">
                                 <div class="">
-                                    <div class="w-full h-[500px]">
+                                    <div class="w-full">
                                         <div>
                                             <img
                                                 width="852"
@@ -1186,9 +1187,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="w-full sm:w-[50%] lg:w-[33.33%] p-4 md:px-[50px] xs:mt-[-127px] 2xl:px-[10px]">
-                                <div class=" xs:mt-[60px]">
-                                    <div class="w-full h-[500px]">
+                            <div class="item w-full p-4 md:px-[50px] 2xl:px-[10px]">
+                                <div>
+                                    <div class="w-full">
                                         <div>
                                             <img
                                                 width="852"
@@ -1224,45 +1225,45 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="w-full sm:w-[50%] lg:w-[33.33%] p-4 xs:mt-[-127px] 2xl:px-[10px] md:px-[50px]">
-                            <div class=" xs:mt-[60px]">
-                                <div class="w-full h-[500px]">
-                                    <div>
-                                        <img
-                                            width="852"
-                                            height="700"
-                                            src="./assets/Frame 28 (2).png"
-                                        />
-                                    </div>
-                                    <div class="pt-[16px] flex justify-between items-center mb-13">
-                                        <h1 class="font-medium p-5 rounded-md text-zinc-400 text-sm/[12px] bg-[#F5F5F5] h-[32px] leading-[16.2px] flex justify-center items-center satoshi-font">
-                                            Business Marketing
-                                        </h1>
+                            <div class="item w-full p-4 2xl:px-[10px] md:px-[50px]">
+                                <div>
+                                    <div class="w-full">
                                         <div>
-                                            <div class="font-medium satoshi-font text-[16px]">30 Min read</div>
+                                            <img
+                                                width="852"
+                                                height="700"
+                                                src="./assets/Frame 28 (2).png"
+                                            />
                                         </div>
-                                    </div>
-                                    <div>
-                                        <div class="font-medium text-lg leading-loose mt-[20px] satoshi-font">
-                                            Lorem ipsum dolor sit amet lorem sit onsectetur ipsum.
+                                        <div class="pt-[16px] flex justify-between items-center mb-13">
+                                            <h1 class="font-medium p-5 rounded-md text-zinc-400 text-sm/[12px] bg-[#F5F5F5] h-[32px] leading-[16.2px] flex justify-center items-center satoshi-font">
+                                                Business Marketing
+                                            </h1>
+                                            <div>
+                                                <div class="font-medium satoshi-font text-[16px]">30 Min read</div>
+                                            </div>
                                         </div>
-                                        <div class="font-medium text-base text-zinc-400 mt-[5px] satoshi-font">
-                                            October 16 2022
+                                        <div>
+                                            <div class="font-medium text-lg leading-loose mt-[20px] satoshi-font">
+                                                Lorem ipsum dolor sit amet lorem sit onsectetur ipsum.
+                                            </div>
+                                            <div class="font-medium text-base text-zinc-400 mt-[5px] satoshi-font">
+                                                October 16 2022
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="mt-5 border mb-5"></div>
-                                    <div>
-                                        <div class="font-normal mb-2 text-base text-zinc-400 leading-loose satoshi-font">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Est parturient orci ut a integer ullamcorper ultricies
-                                            Et egestas.
+                                        <div class="mt-5 border mb-5"></div>
+                                        <div>
+                                            <div class="font-normal mb-2 text-base text-zinc-400 leading-loose satoshi-font">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Est parturient orci ut a integer ullamcorper ultricies
+                                                Et egestas.
+                                            </div>
+                                            <a href="#" class="text-blue-600 font-medium text-base satoshi-font">Read More</a>
                                         </div>
-                                        <a href="#" class="text-blue-600 font-medium text-base satoshi-font">Read More</a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        </div>
+                    </div>
                 </div>
             </section>
         </div>
@@ -1636,7 +1637,7 @@
         </script>
 
         <script>
-            $('.owl-carousel').owlCarousel({
+            $('.owl-carousel1').owlCarousel({
                 items: 1,
                 loop:true,
                 nav:false,
@@ -1655,11 +1656,39 @@
                     1199:{
                         autoplay: false,
                         mouseDrag: false,
+                        loop: false,
                         items:3
                     },
                 }
-            })
+            });
         </script>
+
+    <script>
+        $('.owl-carousel2').owlCarousel({
+            items: 1,
+            loop:true,
+            nav:false,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            dots: false,
+            responsive:{
+                767:{
+                    items: 2,
+                },
+                992:{
+                    autoplay: false,
+                    mouseDrag: false,
+                    items: 2
+                },
+                1199:{
+                    autoplay: false,
+                    mouseDrag: false,
+                    loop: false,
+                    items:3
+                },
+            }
+        });
+    </script>
 
     </body>
 </html>
