responsive spacing fixed

--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
         <div>
             <section class="text-gray-700 body-font">
             <div class="flex pt-[100px] md:flex-row pr-0 flex-col-reverse items-center">
-                <div class="md:pl-5 lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center md:max-w-[50%] mx-auto">
+                <div class="md:pl-5 lg:flex-grow md:w-1/2 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center md:max-w-[50%] mx-auto">
                     <h1 class="max-w-2xl xs:text-[26px] sm:text-[30px] lg:text-[36px] xl:text-[56px] md:text-[30px] mt-9 md:mt-0 mb-8 font-extrabold dark:text-white satoshi-font sm:text-[2rem] xs:text-4xl xl:leading-[68px] main-heading">
                         Everything you <br/>
                         need to run your <br/>
@@ -341,13 +341,13 @@
                 <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0">
                     <div class="bg-[#FAFAFC] mx-auto lg:flex justify-start items-center gap-8 2xl:w-[1455px]
                         2xl:h-[642px] 2xl:flex-row xl:w-[1255px] xl:h-[642px] lg:w-[925px] xl:flex-row lg:flex-col lg:h-[1103px] md:w-[740px] md:mx-auto md:h-[1101px] sm:w-[612px] sm:h-[1205px]">
-                        <div class="w-[592px] h-[400px] rounded-[12px] md:mx-auto sm:ml-3 xs:w-[91vw] xs:h-[244px]">
+                        <div class="w-[592px] rounded-[12px] md:mx-auto sm:ml-3 xs:w-[91vw]">
                             <video poster="assets/Frame%20180.png" controls="controls" class="cursor-pointer rounded-[12px] w-[100%]">
                                 <source src="assets/video%201.mp4" type="video/mp4" />
                             </video>
                         </div>
 
-                        <div class="w-[592px] h-[642px] flex justify-start items-center gap-8 md:mx-auto md:mt-10 2xl:flex-row xl:flex-row lg:flex-row md:flex sm:flex-row sm:mt-10 xs:mt-[25%] sm:mx-auto xs:flex-col xs:w-[91vw] xs:h-[1161px]">
+                        <div class="w-[592px] h-[642px] flex justify-start items-center gap-8 md:mx-auto md:mt-10 2xl:flex-row xl:flex-row lg:flex-row md:flex sm:flex-row sm:mt-10 xs:mt-[14%] sm:mx-auto xs:flex-col xs:w-[91vw] xs:h-[1161px]">
                             <div class="w-[280px] h-[530px]">
                                 <div class="bg-white shadow w-[280px] h-[249px] rounded-[12px] p-[32px]">
                                     <h1 class="w-[216px] h-[49px] text-[36px] leading-[48.6px] font-[700] text-[#0055FF] satoshi-font">
@@ -415,7 +415,7 @@
             <section class="w-[100%] h-[100%] pt-[108px]" id="services">
                 <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0">
                     <div class="grid justify-items-center mb-[60px]">
-                        <h1 class="main-title text-center pb-[10px] xs:pt-[10rem]">
+                        <h1 class="main-title text-center pb-[10px]">
                             Our Services
                         </h1>
                         <div class="border-[3px] border-[#F0B80F] rounded-[24px] w-[84px] h-[6px] about-underline"></div>
@@ -1271,7 +1271,7 @@
         <!-- Our FAQs  -->
         <div id="faqs">
             <section class="w-[100%] pt-[108px]">
-                <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 xs:mt-[-10%] sm:mt-[0%] lg:mt-[5%] xl:mt-[5%] lg:mt-[-12%] md:-[-12%] sm:mt-[-12%] justify-items-center ">
+                <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 justify-items-center ">
                     <div class="mb-[60px]">
                         <h1 class="main-title text-center pb-[10px]">
                             Our FAQs
