about us margin fixed

--- a/src/index.html
+++ b/src/index.html
@@ -333,7 +333,7 @@
         <div id="about">
             <section class="grid bg-[#FAFAFC] py-[108px]">
                 <div class="grid justify-items-center mb-[60px]">
-                    <h1 class="main-title text-center pb-[10px] xs:mt-[-17%]">
+                    <h1 class="main-title text-center pb-[10px]">
                         About Us
                     </h1>
                     <div class="border-[3px] border-[#F0B80F] rounded-[24px] w-[84px] h-[6px] about-underline"></div>
